# Kids_Exo

./: .gitignore  README.md  alembic.ini  pyproject.toml
docs/: development-conventions.md  french-learning-design.md  kids-exo-roadmap-priority-cn.md  learner-dashboard-api-plan.md  lesson-model-design.md  product-design.md  web-app-design.md
kids_exo/: __init__.py  __main__.py  catalog.py  cli.py  config.py  generator.py  localization.py  models.py  printable.py
migrations/: env.py
presets/: difference_of_squares_beginner.toml  distributive_property_beginner.toml  mental_multiplication_mixed_100.toml  mental_multiplication_mixed_practice.toml  multiply_by_11_beginner.toml  multiply_by_11_three_digit_beginner.toml  multiply_by_5_25_125_beginner.toml  multiply_by_9_99_999_beginner.toml  near_round_pair_multiplication_beginner.toml  same_tens_ones_sum_to_ten_beginner.toml  square_ending_in_5_beginner.toml  tens_sum_to_ten_same_ones_beginner.toml  three_digit_same_prefix_ones_sum_to_ten_beginner.toml
scripts/: dev-services.sh
tests/: test_auth_passwords.py  test_catalog.py  test_cli.py  test_config.py  test_difference_of_squares.py  test_generation.py  test_mixed_practice.py  test_multiply_by_11.py  test_multiply_by_11_three_digit.py  test_multiply_by_5_25_125.py  test_multiply_by_9_99_999.py  test_near_round_pair_multiplication.py  test_online_catalog.py  test_online_evaluation.py  test_online_session.py  test_pdf_renderer.py  test_persistence.py  test_plugin_localization.py  test_same_tens_ones_sum_to_ten.py  test_square_ending_in_5.py  test_web_api.py  (+2 more)
(+252 files in other folders)
