[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kids-exo"
version = "0.2.0"
description = "Printable and online children's maths practice generator."
requires-python = ">=3.11"

[project.optional-dependencies]
web = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.30,<1",
]
test = [
    "httpx>=0.27,<1",
]
tts = [
    "edge-tts>=7.2,<8",
]

[tool.setuptools.packages.find]
include = ["kids_exo*"]

[tool.setuptools.package-data]
kids_exo = ["plugins/*/locales/*.toml"]
